--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,85 @@
-<div>
-  <label>Payee Name</label>
-  <input (input)="onNameChange($event.target.value)" />
-</div>
+<form class="container">
+  <h3>Payment Form</h3>
+
+  <div class="row">
+    <div class="form-group col">
+      <label>Payee Name</label>
+      <input class="form-control" (input)="onNameChange($event.target.value)" />
+    </div>
+
+    <div class="col">
+      <label><b>Name</b></label>
+      <div>
+        {{ name | titlecase }}
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="form-group col">
+      <label>Payment Date</label>
+      <input type="date" class="form-control" (input)="onDateChange($event.target.value)" />
+    </div>
+
+    <div class="col">
+      <label><b>Payment Date</b></label>
+      <div>
+        {{ Paymentdate | date: "MMMM d, y"}}
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="form-group col">
+      <label>Amount</label>
+      <input class="form-control" (input)="onAmountChange($event.target.value)" />
+    </div>
+
+    <div class="col">
+      <label><b>Amount</b></label>
+      <div>
+        {{ amount | currency }}
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="form-group col">
+      <label>Height</label>
+      <input class="form-control" (input)="onHeightChange($event.target.value)" />
+    </div>
+
+    <div class="col">
+      <label><b>Height</b></label>
+      <div>
+        {{ height | number: '1.0-2'}}
+      </div>
+    </div>
+  </div>
+  <!-- {{ car | json }} -->
+
+  <div class="row">
+    <div class="form-group col-sm-5">
+      <label>Miles</label>
+      <input class="form-control" (input)="onMilesChange($event.target.value)" />
+    </div>
+
+    <div class="form-group col-sm-1">
+      <div class="random">
+        <label for="units">Unit</label>
+        <select id="units" class="form-control">
+          <!-- <option value="cm">cm</option>
+        <option value="m">m</option>
+        <option value="km">km</option> -->
+        </select>
+      </div>
+    </div>
+
+    <div class="col">
+      <label><b>Kilometers</b></label>
+      <div>
+        {{ miles | convert: 'm' | number: '1.0-2' }}
+      </div>
+    </div>
+  </div>
+</form>
